2010-08-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Minor comments.
	* sim/ucsim/z80.src/inst.cc:
	  Fixed #3061455.

2010-09-06 Raphael Neider <rneider AT web.de>

	* configure.in, debugger/mcs51/configure.in,
	  device/lib/pic/configure.in, device/lib/pic16/configure.ac,
	  sim/ucsim/configure.in, sim/ucsim/custom.h,
	  sim/ucsim/ddconfig_in.h, support/packihx/configure.in:
	  updated build system to allow autoreconf -fi to set up the project,
	  regenerated files

2010-09-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/AT89C513xA.h: new, added, thanks Anirban Brahmachari

2010-08-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fixed #3052514.

2010-08-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genCast): fixed bug with ruonly src and dest downcast,
	  (AOP_IS_STR): replaced thoughout with IS_OP_RUONLY,
	  synced with mcs51,
	  (genDjnz): fixed bug 2995824
	* src/mcs51/gen.c (continueIfTrue, jumpIfTrue, jmpTrueOrFalse, genAnd,
	  genOr, genXor, genDjnz): fixed bugs 2989562 and 2995824
	* src/ds390/ralloc.c,
	* src/SDCC.lex: cosmetic changes
	* support/regression/tests/bug2686159.c: disabled segfaulting test on host
	* support/regression/tests/bug2989562.c: new, added

2010-08-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCcse.c (cseBBlock): fixed bug 2686159 with part of patch by Robert
	  Larice, thanks
	* src/SDCCBBlock.c,
	* src/SDCCglobl.h: cosmetic changes
	* support/regression/tests/bug2686159.c: new, added

2010-08-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genAnd, genOr, genXor): fixed bug 2944399
	* src/mcs51/ralloc.c (packRegsForAccUse): disabled strange exception
	* support/regression/tests/bug2944399.c: new, added

2010-08-22 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/msc1210.h:
	  sdcc library license changed to GPL+LE

2010-08-20 Raphael Neider <rneider AT web.de>
